[project]
name = "wave-lk-cell"
version = "0.1.0"
description = "WaveLKCell: Wavelet-Enhanced Large Kernel Cell Nuclei Instance Segmentation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "lightning>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "timm>=0.9",
    "datasets>=2.14",
    "huggingface_hub>=0.17",
    "transformers>=4.30",
    "albumentations>=1.3",
    "torchmetrics>=1.0",
    "scipy>=1.10",
    "numpy>=1.24",
    "pillow>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wave_lk_cell"]

[project.scripts]
wave-lk-cell = "wave_lk_cell.__main__:main"
