[project]
name = "wave-lk-cell"
version = "0.1.0"
description = "WaveLKCell: Wavelet-Enhanced Large Kernel Cell Nuclei Instance Segmentation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "timm>=0.9",
    "datasets>=2.14",
    "huggingface_hub>=0.17",
    "transformers>=4.30",
    "albumentations>=1.3",
    "scipy>=1.10",
    "scikit-image>=0.20",
    "numpy>=1.24",
    "pillow>=9.0",
    "tensorboard>=2.14",
    "torchmetrics>=1.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.7.2",
    "monai>=1.4",
    "numba>=0.58",
    "tqdm>=4.60",
    "opencv-python>=4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wave_lk_cell"]

[project.scripts]
wave-lk-cell = "wave_lk_cell.__main__:main"
